<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.epimorphics.lda</groupId>
  <artifactId>elda</artifactId>
  <version>3.0.4-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>elda</name>
  <description>Top level linked data API project</description>

  <scm>
    <connection>scm:git:${tempSCM}</connection>
    <developerConnection>scm:git:${tempSCM}</developerConnection>
    <url>scm:git:${tempSCM}</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <tempSCM>git@github.com:epimorphics/elda.git</tempSCM>
    <project.tagname />

    <ver.jena>5.6.0</ver.jena>
    <ver.junit>4.13.2</ver.junit>
    <ver.jersey>3.1.12</ver.jersey>
    <ver.servlet-api>3.0.1</ver.servlet-api>
    <ver.slf4j>2.0.17</ver.slf4j>
    <ver.velocity>2.4.1</ver.velocity>
    <ver.wagon>2.2</ver.wagon>
    <ver.xmlunit>1.4</ver.xmlunit>
    <ver.jackson>2.22.1</ver.jackson>
    <jdk.version>21</jdk.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
    <tomcat.version>11.0.21</tomcat.version>
  </properties>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-eclipse-plugin</artifactId>
          <configuration>
            <downloadSources>true</downloadSources>
            <downloadJavadocs>true</downloadJavadocs>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.1</version>
          <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ftp</artifactId>
        <version>3.5.3</version>
      </extension>

      <extension>
        <groupId>org.springframework.build</groupId>
        <artifactId>aws-maven</artifactId>
        <version>5.0.0.RELEASE</version>
      </extension>
    </extensions>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <skip>true</skip>
        </configuration>
        <executions>
          <execution>
            <id>aggregate</id>
            <goals>
              <goal>aggregate</goal>
            </goals>
            <configuration>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>

    </plugins>
  </build>


  <dependencies>

    <dependency>
      <!-- Override 3.2.1 introduced by org.apache.velocity:velocity@1.7 -->
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2.2</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${ver.junit}</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${ver.slf4j}</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>${ver.xmlunit}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.25</version>
    </dependency>
    <dependency>
      <groupId>net.logstash.logback</groupId>
      <artifactId>logstash-logback-encoder</artifactId>
      <version>9.0</version>
    </dependency>

    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.1.0</version>
    </dependency>
  </dependencies>

    <distributionManagement>
        <repository>
            <id>epi-public-s3-release</id>
            <name>Epimorphics S3 release repository</name>
            <url>s3://epi-repository/release</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>

        <snapshotRepository>
            <id>epi-public-s3-snapshot</id>
            <name>Epimorphics S3 snapshot repository</name>
            <url>s3://epi-repository/snapshot</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </snapshotRepository>
    </distributionManagement>

  <repositories>

    <repository>
      <id>epi-public-repo</id>
      <name>Epimorphics Public Repository</name>
      <url>https://repository.epimorphics.com</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>apache-repo-snapshots</id>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>apache-repo-releases</id>
      <url>https://repository.apache.org/content/repositories/releases/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>

    <repository>
      <id>maven2-repository.dev.java.net</id>
      <name>Java.net Repository for Maven</name>
      <url>https://download.java.net/maven/2/</url>
      <layout>default</layout>
    </repository>

    <repository>
      <id>epi-public-s3-snapshot</id>
      <name>Epimorphics S3 snapshot repository</name>
      <url>https://s3-eu-west-1.amazonaws.com/epi-repository/snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>epi-public-s3-release</id>
      <name>Epimorphics S3 release repository</name>
      <url>https://s3-eu-west-1.amazonaws.com/epi-repository/release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>

  </repositories>

  <modules>
    <module>elda-lda</module>
    <module>elda-assets</module>
    <module>elda-common</module>
    <module>elda-standalone</module>
    <module>elda-testing-webapp</module>
  </modules>

</project>
